# json-spec-elm

./: .gitignore  LICENSE  README.md  cabal.project  cabal.project.freeze  changelog.md  json-spec-elm.cabal
.github/workflows/: haskell.yml
src/Data/JsonSpec/: Elm.hs
test/: test-pass.hs  test.hs
