cabal-version:       3.0
name:                json-spec-elm
version:             0.1.0.0
synopsis:            json-spec-elm
-- description:         
homepage:            https://github.com/owensmurray/json-spec-elm
license:             NONE
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2022 Rick Owens
-- category:            
build-type:          Simple
extra-source-files:
  README.md
  LICENSE

common dependencies
  build-depends:
    , base                 >= 4.17     && < 4.18
    , bound                >= 2.0.7    && < 2.1
    , containers           >= 0.6.7    && < 0.7
    , elm-syntax           >= 0.3.2.0  && < 0.4
    , json-spec            >= 0.2.1.0  && < 0.3
    , mtl                  >= 2.2.2    && < 2.3
    , prettyprinter        >= 1.7.1    && < 1.8
    , text                 >= 2.0.2    && < 2.1
    , unordered-containers >= 0.2.19.1 && < 0.3

common warnings
  ghc-options:
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints
    -Wall

library
  import: dependencies, warnings
  exposed-modules:     
    Data.JsonSpec.Elm
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  import: dependencies, warnings
  main-is: test.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends:
    , json-spec-elm
    , hspec >= 2.11.1 && < 2.12

